# kamernet_scraper

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  HEROKU_DEPLOYMENT.md  LICENSE  Procfile  README.md  SECURITY.md  docker-compose.yml  get_telegram_chat_id.py  kamernet_scraper.py  pyproject.toml  requirements.txt  runtime.txt  schema.sql
.claude/: CLAUDE.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  new_profile.yml
.github/workflows/: ci.yml
dashboard/: .dockerignore  .env.example  Dockerfile  README.md  next.config.ts  package-lock.json  package.json
dashboard/src/: proxy.ts
dashboard/src/app/: layout.tsx  page.tsx
dashboard/src/app/analytics/: page.tsx
dashboard/src/app/api/analytics/: route.ts
dashboard/src/app/api/listings/: route.ts
dashboard/src/app/listings/: page.tsx
dashboard/src/app/login/: page.tsx
dashboard/src/components/: analytics-widgets.tsx  filter-bar.tsx  nav.tsx  price-chart.tsx  recent-listings.tsx  stats-cards.tsx  type-breakdown.tsx
dashboard/src/lib/: db.ts  queries.ts  types.ts  utils.ts
docs/: DEPLOYMENT.md  NOTIFICATIONS.md  PROFILES.md
profiles/: family-utrecht.yaml  generic.yaml  student-amsterdam.yaml  young-professional-randstad.yaml
radar/: __init__.py  __main__.py  ai.py  cli.py  config.py  db.py  fetch.py  profile.py  scheduler.py
radar/notify/: __init__.py  apprise.py  discord.py  telegram.py
scripts/: rescore.py
tests/: test_ai.py  test_fetch.py  test_notify_apprise.py  test_profile.py
(+2 files in other folders)
