[project]
name = "kamernet-radar"
version = "1.0.0"
description = "Real-time Kamernet rental scraper with LLM-powered scoring and notifications anywhere."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",  # line too long (ruff format handles layout)
    "B008",  # function calls in defaults (fine for pydantic Field(...))
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -q"
